# test_tongue

./: .gitignore  CMakeLists.txt  PDLanalysis  README.md  build.sh  eyeMechAnalysis  makefile  makefile.org  minimumComplianceProblem  muscluarModeling  rat_analysis  test_calcSDF  test_calcSurfaceCurvature  test_makeInterface
PDLmechanicalAnalysis/: README.md
example/: PDL.tp
example/PDL/: toothM1_3.ply
example/SFEM/: hexa.tp  muscle.tp  tetra.tp
example/eyeMech/: eye.tp
include/: ShapeFunction.h  allocation.h  domain.h  fem_define.h  info.h  pardiso_solver.h  rigidBody.h  vtkCellType.h
matsumura/: displacement.eps  displacement.gp
src/: CMakeLists.txt  Makefile_PDL.mk  Makefile_hand.mk  SurfaceSet.cpp.org  TriangleSet.cpp  allocation.cpp  domain.cpp  fem.cpp  fem_ACL_spatialForm.cpp  fem_PDL_spatialForm.cpp  fem_PDL_spatialForm2018.cpp  fem_base.cpp  fem_boundary.cpp  fem_hyperFoam_spatialForm.cpp  fem_neoHookean_spatialForm.cpp  fem_postprocess.cpp  fem_preprocessing.cpp  fem_rigidBodyInteraction.cpp  fileIO.cpp  line_search_innerProduct.cpp  main_paradiso.cpp  make_setting.mk  pardiso_solver.cpp  pardiso_solver_rigidBodyInteraction.cpp  rigidBody.cpp  shapeFunction.cpp
src/FEM/: Makefile_hand.mk  ShapeFunction.h  domain.cpp  fem.cpp  fem.h  fem_ACL_spatialForm.cpp.org  fem_PDL_spatialForm.cpp  fem_PDL_spatialForm2018.cpp  fem_boundary.cpp  fem_hyperFoam_spatialForm.cpp  fem_linearElasticMaterial.cpp  fem_neoHookean_spatialForm.cpp  fem_postprocess.cpp  fem_postprocessing.cpp  fem_preprocessing.cpp  fem_rigidBodyInteraction.cpp  line_search_innerProduct.cpp  shapeFunction.cpp  shapeFunction.cpp.org
src/RBD/: Makefile_hand.mk  SurfaceSet.cpp.org  TriangleSet.cpp  rigidBody.cpp  rigidBody.h
src/applications/: CMakeLists.txt  Makefile_hand.mk
src/applications/PDL_tooth_interactionAnalysis/: CMakeLists.txt  Makefile_PDL.mk  main_paradiso.cpp  main_pardiso.cpp
src/applications/eyeMech/: CMakeLists.txt  Makefile_eye.mk  main_paradiso.cpp
src/applications/ligament_bone_insertionAnalysis/: CMakeLists.txt  Makefile_PDL.mk  main_paradiso.cpp
src/applications/main_rigidBodyInteraction/: Makefile_PDL.mk
src/applications/minimumComplianceProblem/: CMakeLists.txt  Makefile_Design.mk
src/applications/rat_analysis/: CMakeLists.txt  Makefile_PDL.mk  main_paradiso.cpp
src/base/: Makefile_hand.mk  allocation.h  domain.h  fileIO.cpp  (+5 more)
src/lib/RBD/: CMakeLists.txt  rigidBody.h
src/muscularHydrostat/: CMakeLists.txt  fem_Takenaka2019.cpp  fem_muscle_spatialForm.cpp  main_pardiso.cpp  muscle.cpp  muscularHydrostat.h  preprocess.cpp
src/shapeAndTopologyOptimization/minimumComplianceProblem/: CMakeLists.txt  main_pardiso.cpp
src/softTissueMechanics/: CMakeLists.txt
src/softTissueMechanics/ONH_Mech/: CMakeLists.txt  eyeMech.cpp  eyeMech_boundaryPressure.cpp  fem_NeoHookean_spatialForm.cpp  fem_SantVenant_spatialForm.cpp  preprocess.cpp
src/softTissueMechanics/PDL/: CMakeLists.txt
src/softTissueMechanics/PDL/PDL_human/: CMakeLists.txt  PDL.cpp  humanPDL_Analysis.cpp
src/softTissueMechanics/PDL/PDL_rat/: CMakeLists.txt
src/softTissueMechanics/PDL/lib/: CMakelists.txt  rigidBodyInteraction_base.cpp
src/softTissueMechanics/ligament_bone_insertionAnalysis/: CMakeLists.txt  LigamentBoneInsertion.h  LigamentBoneInsertionSite.cpp
src/solvers/: CMakeLists.txt  Makefile_hand.mk
src/solvers/FEM/: CMakelists.txt  Makefile_hand.mk  PDL.cpp  ShapeFunction.h  StVenant_KirchhoffMaterial.h  domain.cpp  domain.h  fem.cpp  fem.h  fem_PDL_spatialForm2018.cpp  fem_SantVenant_spatialForm.cpp  fem_base.cpp  fem_base_mathTool.h  fem_boundary.cpp  fem_linearElasticMaterial.cpp  fem_postprocessing.cpp  fem_preprocessing.cpp  triangleSurfaceCurvature.cpp  triangleSurfaceCurvature.h
src/solvers/FEM/unused/: fem_PDL_spatialForm.cpp  fem_hyperFoam_spatialForm.cpp
src/solvers/LigamentBoneInsertion/: CMakelists.txt  LigamentBoneInsertion.h  LigamentBoneInsertionSite.cpp  Makefile_hand.mk  fem_SantVenant_spatialForm.cpp  preprocess.cpp
src/solvers/PDL/: Makefile_hand.mk  PDL.cpp  PDL.h  Rat_PDL.h  fem_PDL_spatialForm2018.cpp  fem_Rat_PDL.cpp  fem_linearElasticMaterial.cpp  fem_postprocessing.cpp
src/solvers/PDL_TOOTH_interaction/: Makefile_hand.mk  rigidElasticInteraction.cpp  rigidElasticInteraction.h
src/solvers/PDL_analysis/: CMakeLists.txt  Makefile_hand.mk  Makefile_hand.mk.org  PDL_analysis.h  humanPDL_Analysis.cpp
src/solvers/PDL_analysis/PDL/: Makefile_hand.mk  fem_PDL_spatialForm2018.cpp
src/solvers/PDL_analysis/PDL_TOOTH_interaction/: Makefile_hand.mk  humanPDL_Analysis.cpp  ratPDL_Analysis.cpp  rigidBodyInteraction_base.cpp  rigidElasticInteraction.h
src/solvers/PDL_analysis/humanPDL/: CMakelists.txt  Makefile_hand.mk  PDL.cpp  PDL.h  fem_PDL_spatialForm2018.cpp  humanPDL_Analysis.cpp
src/solvers/PDL_analysis/ratPDL/: CMakelists.txt  Makefile_hand.mk  Rat_PDL.h.org  fem_Rat_PDL.cpp  fem_Rat_postprocessing.cpp  ratPDL_Analysis.cpp
src/solvers/RBD/: CMakelists.txt  Makefile_hand.mk  TriangleSet.cpp  rigidBody.cpp
src/solvers/base/: CMakelists.txt  Makefile_hand.mk  allocation.h  fem_define.h  fileIO.cpp  fileIO.h  gauss.h  math_tools.cpp  math_tools.h
src/solvers/eyeMech/: CMakelists.txt  Makefile_hand.mk  eye_mechanics.h  preprocess.cpp
src/solvers/interaction/: Makefile_hand.mk  NRscheme_rigidBodyInteraction.cpp  rigidElasticInteraction.cpp  rigidElasticInteraction.h
src/solvers/linearSolver/: CMakelists.txt  Makefile_hand.mk  pardiso_solver.cpp  pardiso_solver.h  pardiso_solver_rigidBodyInteraction.cpp
src/solvers/shapeOptimization/: CMakeLists.txt  Makefile_hand.mk
src/solvers/shapeOptimization/minimumComplianceProblem/: CMakelists.txt  Makefile_hand.mk  femSolidAnalysis.cpp  minimumComplianceProblem.cpp  minimumComplianceProblem.h
src/tests/: CMakeLists.txt  Makefile_hand.mk
src/tests/calcSDF/: CMakeLists.txt  EikonalEq.cpp  Makefile.mk  SignedDistanceFunction.cpp  SignedDistanceFunction.h  main_SDF.cpp
src/tests/calcSurfaceCurvature/: CMakeLists.txt  main_curvature.cpp
src/tests/makeInterface/: CMakeLists.txt  Makefile.mk  main.cpp
(+50 files in other folders)
