###################################################################################
#
# Vessel tree construction
#
# Copyright (c) 2020 Biomechanics Lab.,
#                    Department of Mechanical Science and Bioengineering,
#                    Graduate School of Engineering Science,
#                    Osaka University.
# All rights reserved.
#
###################################################################################

add_subdirectory(eyeMech)
# add_subdirectory(ligament_bone_insertionAnalysis)
add_subdirectory(minimumComplianceProblem)
add_subdirectory(PDL_tooth_interactionAnalysis)
add_subdirectory(rat_analysis)